testsuite/tests/formatting/margins.ocaml.reference
Line 2, characters 4-9:
2 | 1 + "foo";;
        ^^^^^
Error: This constant has type
         string
       but an expression was expected of type
         int
Line 2, characters 4-9:
2 | 1 + "foo";;
        ^^^^^
Error: This constant has type string but an expression was expected of type int

